Bug 384294 - SDDM doesn't change the custom background image with accent in filepath
Summary: SDDM doesn't change the custom background image with accent in filepath
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_sddm (other bugs)
Version First Reported In: 5.10.5
Platform: Manjaro Linux
: NOR minor
Target Milestone: ---
Assignee: David Edmundson
URL:
Keywords:
: 380021 391541 404943 406894 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-09-02 20:17 UTC by moshpirit
Modified: 2019-04-25 21:23 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.58
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description moshpirit 2017-09-02 20:17:54 UTC
I'm using Andromeda theme and tried to change the background. I got the Andromeda default theme and no avatar (which is a PNG). The lock screen theme is still Breath ( preview: https://github.com/manjaro/artwork-breath/blob/master/sddm-theme/preview.png ).

I'm using Plasma 5.10.5 on Manjaro stable (Manjaro 17.0.2 Gellivara)

Feel free to ask me any information about this issue.
Comment 1 David Edmundson 2017-09-03 10:03:07 UTC
Please run systemsettings from the command line, change the wallpaper and paste any output.

Also, it's interesting that it's the manjaro background not ours..it implies they've done some patching somewhere, which might not be quite right.

Do you know where I can get relevant manjaro pkgbuild files?
Comment 2 moshpirit 2017-09-03 12:35:21 UTC
(In reply to David Edmundson from comment #1)
> Please run systemsettings from the command line, change the wallpaper and
> paste any output.


Sure!

    ┌─ ~ 
    └─┤systemsettings5
    Icon theme "ubuntu-mono-dark" not found.
    Icon theme "Mint-X" not found.
    Icon theme "elementary" not found.
    true
    kf5.kio.core: We got some errors while running testparm "Load smb config files from /etc/samba/smb.conf\nError loading services.\n"
    kf5.kio.core: KSambaShare: Could not find smb.conf!
    kf5.kio.core: We got some errors while running 'net usershare info'
    kf5.kio.core: "Can't load /etc/samba/smb.conf - run testparm to debug it\n"
    Ovr: "/usr/share/sddm/themes/andromeda/theme.conf.user"
    idx: 1
    Option saved


> Also, it's interesting that it's the manjaro background not ours..it implies
> they've done some patching somewhere, which might not be quite right.
> 
> Do you know where I can get relevant manjaro pkgbuild files?

I'm not sure, I'm not a developer, but this is the source code: https://github.com/manjaro
Comment 3 David Edmundson 2017-09-03 12:56:01 UTC
Oh, they literally fork the entire theme: https://github.com/manjaro/artwork-andromeda/tree/master/sddm-theme

Their code /looks/ ok though, it still tries to load from a config.

Do you still have the upstream "Breeze" theme, if so, can you test if that works nicely?

Can you show me: /usr/share/sddm/themes/andromeda/theme.conf.user
Comment 4 moshpirit 2017-09-03 13:50:21 UTC
(In reply to David Edmundson from comment #3)
> Do you still have the upstream "Breeze" theme, if so, can you test if that
> works nicely?

Do you mean if I have the "Breeze" SDDM theme? no, I don't, but if you mean the plasma theme, it does work nice indeed.

> Can you show me: /usr/share/sddm/themes/andromeda/theme.conf.user

Of course!!

┌─ ~ 
└─┤cat /usr/share/sddm/themes/andromeda/theme.conf.user
[General]
type=image

Thank you for your replies!
Comment 5 David Edmundson 2017-09-03 21:06:02 UTC
It seems we can get in that state if we don't copy the background picture.

Is the image you're selecting a local file on your own filesystem?
Comment 6 moshpirit 2017-09-05 18:51:40 UTC
(In reply to David Edmundson from comment #5)
> Is the image you're selecting a local file on your own filesystem?

Yes, it is. It's on a local folder located in ~/Imágenes (in English Pictures)/[...]
Comment 7 David Edmundson 2017-09-05 19:21:28 UTC
Can you test something stupid?

Can you try from a patch without any accents.
Comment 8 moshpirit 2017-09-05 19:31:15 UTC
I can't believe this worked!! o_o
Comment 9 David Edmundson 2017-09-05 19:32:42 UTC
I can't believe I have a stupid bug :/

I'm sure I've heard of this somewhere before for some other auth thing.
Comment 10 moshpirit 2017-09-05 19:43:53 UTC
OK I tried to see if this could also fix the avatar not been shown but it doesn't (at least not with the PNG image ~/.face) haha I think I'll research in a couple of days about it!

Thank you so much for your support! You've been very helpful!!
Comment 11 David Edmundson 2017-09-06 22:37:59 UTC
*** Bug 380021 has been marked as a duplicate of this bug. ***
Comment 12 David Edmundson 2017-09-06 23:32:18 UTC
Patch: https://phabricator.kde.org/D7716
Comment 13 David Edmundson 2018-03-07 20:49:04 UTC
*** Bug 391541 has been marked as a duplicate of this bug. ***
Comment 14 David Edmundson 2019-03-01 16:04:47 UTC
*** Bug 404943 has been marked as a duplicate of this bug. ***
Comment 15 David Edmundson 2019-03-01 18:27:08 UTC
New patch: https://phabricator.kde.org/D7732
Comment 16 Guo Yunhe 2019-03-01 18:29:40 UTC
Thanks for the patch!
Comment 17 Eugene 2019-03-02 20:02:38 UTC
Hello. What about Cyrillic in path? Did anyone tried?
Comment 18 David Edmundson 2019-04-07 15:34:56 UTC
Git commit 0c7e12ec9cd83cc4739eda7450c073d56d4e84c2 by David Edmundson.
Committed on 07/04/2019 at 15:34.
Pushed by davidedmundson into branch 'master'.

Force KAuth helpers to have UTF-8 support

Our helper runs as root and doesn't have the user's environment
(including $LANG). This defaults to one without UTF-8.

Without a locale with UTF-8
QFileInfo::exists("/backgrounds/crepé.png") returns false.

This causes problems in the SDDM KCM's code to set a wallpaper. (and
probably elsewhere)

M  +3    -0    src/kauthactionreply.h
M  +8    -0    src/kauthhelpersupport.cpp

https://commits.kde.org/kauth/0c7e12ec9cd83cc4739eda7450c073d56d4e84c2
Comment 19 Nate Graham 2019-04-25 21:23:31 UTC
*** Bug 406894 has been marked as a duplicate of this bug. ***