Force KAuth helpers to have UTF-8 support

Our helper runs as root and doesn't have the user's environment
(including $LANG). This defaults to one without UTF-8.

Without a locale with UTF-8
QFileInfo::exists("/backgrounds/crepé.png") returns false.

This causes problems in the SDDM KCM's code to set a wallpaper. (and
probably elsewhere)

BUG: 384294